[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deploy_utils"
version = "0.1.0"
description = "Simple implementation of Gym style MuJoCo environment for sim2sim with ROS2 support for Unitree robots"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Yutang Lin", email = "yutang.lin@stu.pku.edu.cn"}
]
maintainers = [
    {name = "Yutang Lin", email = "yutang.lin@stu.pku.edu.cn"}
]
keywords = ["mujoco", "simulation", "robotics", "ros2", "unitree", "gym", "reinforcement-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics",
]
requires-python = ">=3.8"
dependencies = [
    "mujoco>=2.3.0",
    "numpy>=1.21.0",
    "torch>=1.9.0",
    "rclpy>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Yutang-Lin/Mujoco-Sim2Sim"
Repository = "https://github.com/Yutang-Lin/Mujoco-Sim2Sim.git"
"Bug Tracker" = "https://github.com/Yutang-Lin/Mujoco-Sim2Sim/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["deploy_utils*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.setuptools.package-data]
"deploy_utils" = ["lib/*.so", "assets/*"]

[tool.setuptools.data-files]
"deploy_utils.lib" = ["lib/crc_aarch64.so", "lib/crc_amd64.so"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["deploy_utils"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=deploy_utils",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
